changed about us section added finishing touches

--- a/about-us.html
+++ b/about-us.html
@@ -47,38 +47,28 @@
 
             <div>
                 <h3><span class="u">Abo</span>ut us</h3>
-                <p>The Heart and Soul Foundation solely exists to serve the community, especially the disadvantaged
-                    children,
-                    with the help of our donors and sponsors. To do this in a sustainable manner, we believe in
-                    excellent
-                    communication, leadership and human relations.</p>
-
-                <p> Through our different programs we will ensure the growth of individuals, participation, and pride in
-                    the
-                    community.</p>
-
-                <p>At the Heart and Soul Foundation, we recognize the significance of providing meals for both our
-                    preschool
-                    and after-school children, as well as the wider community. Our commitment is to ensure that basic
-                    needs
-                    are
-                    met daily. We are also committed to supporting individuals in their job search, empowering them
-                    towards
-                    upwards mobility and growth.</p>
-
-                <p>Our focus will also be on the elderly population in our community, specifically those residing in old
-                    age
-                    homes. We understand that older individuals face unique challenges and have distinct needs. As such,
-                    we
-                    will
-                    conduct regular evaluations of our programs for the elderly to ensure their specific needs are met
-                    effectively.</p>
-
-                <p>Whenever necessary, professionals from the community will provide counseling services to individuals
-                    who
-                    require support for issues related to substance abuse, gender-based violence, and family matters</p>
-
-                <p>Together we will make a difference.</p>
+                <p>
+                    The Heart and Soul Foundation is a registered Non-Profit Company established in 2021 to address the
+                    needs of disadvantaged, underserved, and underprivileged children, and individuals of all ages from
+                    Quellerie Park, Burgershoop, Apple Park and Krugersdorp West in Gauteng.
+                </p>
+                <p>
+                    Welcome to our charity organization! We are a dedicated team of individuals committed to making a
+                    positive difference in the world by supporting those in need. Our mission is to provide assistance
+                    and resources to disadvantaged and underprivileged communities, with a focus on improving the lives
+                    of children, families, and individuals facing difficult circumstances.
+                </p>
+                <p>Through our various programs and initiatives, we strive to address critical issues such as poverty,
+                    hunger, lack of education, and limited access to healthcare. We work closely with local
+                    organizations and community leaders to identify areas of need and to develop effective solutions
+                    that can make a meaningful impact.
+                </p>
+                <p>Our organization is powered by the generosity and support of people like you. Whether you choose
+                    to
+                    donate your time, resources, or funds, every contribution makes a difference and helps us achieve
+                    our mission. We are grateful for the opportunity to serve others, and we invite you to join us in
+                    making a positive difference in the world. Thank you for your support!
+                </p>
             </div>
             <div class="img-remove-mobile">
                 <img src="/images/volunteer.jpg" class="img">
