--- a/blanket-run.html
+++ b/blanket-run.html
@@ -40,98 +40,94 @@
         </div>
     </nav>
 
-
-    <div class="food-donations-color">
-        <img src="/images/article_images/blankets.jpg" class="blanket-donations-img" alt="blankets">
-        <span class="blanket-main-heading">WINTER</span>
-        <span class="blanket-main-heading-2">BLANKET RUN</span>
-        <div class="article-content">
-            <p>Extreme poverty is a harsh reality that affects millions of people worldwide, and its effects are
-                particularly devastating during the winter months. For many people living in poverty, the winter brings
-                a
-                host of challenges, from harsh weather conditions to the difficulty of staying warm and dry. One of the
-                most significant struggles for people living in extreme poverty during the winter is the lack of access
-                to
-                warm clothing and blankets. Many families cannot afford to buy warm clothing or blankets, and as a
-                result, they are left exposed to the elements. This can lead to serious health problems, including
-                hypothermia and frostbite. Children are particularly vulnerable, as they may not have the ability to
-                keep
-                themselves warm and dry in harsh weather conditions.</p>
-            <p>That&#39;s where the Heart and Soul Foundation
-                comes in, and why donating blankets to our organization can make a real difference in the lives of these
-                children. By donating blankets to the Heart and Soul Foundation, you can help provide warmth and
-                comfort to children who may be struggling to stay warm during the colder months. Your donation can
-                help ensure that these children have access to the basic necessities they need to stay healthy and
-                happy, even when resources are scarce. In addition to providing warmth, your donation can also help
-                boost the morale of these children. Knowing that others care about their well-being can help them feel
-                more connected to their community and less alone in their struggles. </p>
-
-            <p>In addition to providing warmth, your donation can also help
-                boost the morale of these children. Knowing that others care about their well-being can help them feel
-                more connected to their community and less alone in their struggles. This can have a positive impact on
-                their mental health and overall sense of well-being. We believe that everyone deserves to stay warm
-                and dry, especially during the winter months when the weather can be particularly harsh. By providing
-                warm clothing and blankets, we are helping to alleviate the suffering of those living in poverty, giving
-                them the tools they need to stay healthy and comfortable. Donating blankets and warm clothes to Heart
-                and Soul Foundation is an excellent way to make a tangible difference in the lives of those affected by
-                extreme poverty. Even a small donation can go a long way in providing warmth and comfort to those
-                who need it most. By supporting our organization, you can help to ensure that children and individuals
-                in impoverished communities have access to warm clothing and blankets, which can make a significant
-                difference in their lives.
-                I encourage you to consider making a donation today and help make a positive impact in the lives of
-                these children.
-                More details will be shared on all of our platforms.</p>
-
-        </div>
+    <div class="article-flex-gap">
     </div>
-    <div class="also-in-this-section-blanket">
-        <h2><u class="u">Also in this sect</u>ion</h2>
-
-        <div class="article-1-light-shadow">
-
-            <img src="/images/article_images/food_donations.jpg" class="article-1-picture" alt="food-donations">
-            <h4 class="article-title">FOOD DONATIONS</h4>
-            <p class="article-1-paragraph-1">The Heart and Soul Foundation is an organization that is dedicated to
-                helping those in need by providing
-                food support to the children and elderly people in our care. There are many reasons why donating
-                food
-                to our organization is a worthwhile and impactful way to give back to your community....</p>
-
-            <h5 class="article-1-readmore"><i>
-                    <a href="food-donations.html" class="link">Read More </a>
-                </i></h5>
+    <div class="flex-article-test">
+        <div class="article-item">
+            <img src="images/article_images/blankets.jpg">
 
         </div>
-        <div class="article-2-light-shadow">
 
-            <img src="/images/article_images/golf.jpg" class="article-1-picture" alt="golf-day">
-            <h4 class="article-title">2023 Golf Day</h4>
-            <p class="article-2-paragraph-1">The 16th of May is an important day for our organization. We are hosting a
-                Golf day to raise funds for our cause. Our organization is dedicated to providing a safe and nurturing
-                environment for children who are in need.</p>
-            <p class="article-2-paragraph-2"></p>
+        <div>
+            <h3>WINTER BLANKET RUN</h3>
+        </div>
 
+    </div>
+    <div class="article-content">
+        <p>Extreme poverty is a harsh reality that affects millions of people worldwide, and its effects are
+            particularly devastating during the winter months. For many people living in poverty, the winter brings a
+            host of challenges, from harsh weather conditions to the difficulty of staying warm and dry. One of the
+            most significant struggles for people living in extreme poverty during the winter is the lack of access to
+            warm clothing and blankets. Many families cannot afford to buy warm clothing or blankets, and as a
+            result, they are left exposed to the elements.
+            More details will be shared on all of our platforms.</p>
+        <p>This can lead to serious health problems, including
+            hypothermia and frostbite. Children are particularly vulnerable, as they may not have the ability to keep
+            themselves warm and dry in harsh weather conditions. That&#39;s where the Heart and Soul Foundation
+            comes in, and why donating blankets to our organization can make a real difference in the lives of these
+            children. By donating blankets to the Heart and Soul Foundation, you can help provide warmth and
+            comfort to children who may be struggling to stay warm during the colder months.</p>
+        <p>Your donation can
+            help ensure that these children have access to the basic necessities they need to stay healthy and
+            happy, even when resources are scarce. In addition to providing warmth, your donation can also help
+            boost the morale of these children. Knowing that others care about their well-being can help them feel
+            more connected to their community and less alone in their struggles. This can have a positive impact on
+            their mental health and overall sense of well-being. We believe that everyone deserves to stay warm
+            and dry, especially during the winter months when the weather can be particularly harsh. </p>
+        <p> By providing
+            warm clothing and blankets, we are helping to alleviate the suffering of those living in poverty, giving
+            them the tools they need to stay healthy and comfortable. Donating blankets and warm clothes to Heart
+            and Soul Foundation is an excellent way to make a tangible difference in the lives of those affected by
+            extreme poverty. Even a small donation can go a long way in providing warmth and comfort to those
+            who need it most. By supporting our organization, you can help to ensure that children and individuals
+            in impoverished communities have access to warm clothing and blankets, which can make a significant
+            difference in their lives.
+            I encourage you to consider making a donation today and help make a positive impact in the lives of
+            these children.</p>
+    </div>
+    <h2 class="article-heading-how-we-help-children"><span class="u">ALSO IN </span>THIS SECTION</h2>
+    <div class="flex-container-one">
 
+        <div class="item">
+            <img src="images/donations.jpg" alt="food-donations">
+            <h3>The power of donations</h3>
+            <p>The act of donating, whether it's money or time, can have an incredibly powerful impact on both the
+                recipient and the giver. Donations can help to create positive change in the world, whether it's in the
+                form of supporting a charitable organization or helping an individual in need.</p>
 
-            <h5 class="article-1-readmore"><i>
-                    <a href="golf-day.html" class="link">Read More </a>
-                </i></h5>
+            <a href="donations.html" class="link readmore">
+                <p>Read More </p>
+            </a>
 
         </div>
-        <div class="article-3-light-shadow">
 
-            <img src="/images/article_images/wallet.jpg" class="article-1-picture" alt="wallet">
-            <h4 class="article-title">Empowering communities to break the cycle of poverty</h4>
-            <p class="article-3-paragraph-1">Poverty is a complex issue that affects millions of people worldwide. Our
-                charity organization is committed to breaking the cycle of poverty by empowering communities and
-                providing them...</p>
-            <p class="article-3-paragraph-2"></p>
+        <div class="item">
+            <img src="images/article_images/wallet.jpg" alt="wallet">
+
+            <h3>Empowering communities to break the cycle of poverty</h3>
+            <p>Poverty is a complex issue that affects millions of people worldwide. Our charity organization is
+                committed to breaking the cycle of poverty by empowering communities and providing them...</p>
 
 
-            <h5 class="article-1-readmore"><i>
-                    <a href="cycle-poverty.html" class="link">Read More </a>
-                </i></h5>
+            <a href="cycle-poverty.html" class="link readmore">
+                <p>Read More </p>
+            </a>
         </div>
+        <div class="item ">
+            <img src="/images/article_images/golf.jpg" alt="golf">
+
+            <h3>2023 Golf Day</h3>
+            <p>The 16th of May is an important day for our organization. We are hosting a Golf day to raise funds
+                for
+                our cause. Our organization is dedicated to providing a safe and nurturing environment for children
+                who
+                are in need.</p>
+
+            <a href="golf-day.html" class="link readmore">
+                <p>Read More </p>
+            </a>
+        </div>
+
     </div>
     <!--_______________________footer_____________________-->
 
