--- a/communities.html
+++ b/communities.html
@@ -38,95 +38,99 @@
         </div>
 
     </nav>
-
-
-    <div class="food-donations-color">
-        <img src="/images/article_images/community.jpg" class="food-donations-img" alt="food-donations">
-        <span class="communities-main-heading">MAKING A DIFFERENCE</span>
-        <span class="communities-main-heading-2">IN THE COMMUNITY</span>
-        <div class="article-content">
-            <p>At our charity organization, we are passionate about creating positive change in our local community.
-                Through our programs and services, we strive to make a difference in the lives of individuals and
-                families who are facing challenges and adversity.
-            </p>
-
-            <p>One way that we are making a difference is by providing essential resources to those in need. Whether
-                it's food and clothing for families who are struggling to make ends meet or educational resources for
-                children who are falling behind in school, our organization is committed to supporting individuals and
-                families in our community.
-
-            </p>
-
-            <p>In addition to providing basic necessities, we are also focused on creating long-term solutions to the
-                issues facing our community. This includes offering job training and employment services to help
-                individuals build a stable and secure future for themselves and their families. We also provide
-                counseling and support services for those who are struggling with mental health issues, addiction, or
-                other challenges.
-            </p>
-
-            <p>One of the things that sets our organization apart is our commitment to collaboration and partnership. We
-                work closely with other community organizations, government agencies, and businesses to create a network
-                of support for those in need. By working together, we are able to leverage our resources and expertise
-                to create greater impact and reach more people in our community.</p>
-
-            <p>Through our programs and services, we have seen firsthand the positive impact that our organization is
-                having on the lives of individuals and families in our community. From providing a hot meal to someone
-                who is hungry to helping a family find stable housing, we know that our work is making a difference.</p>
-
-            <p>We are grateful to our donors, volunteers, and community partners who help make our work possible.
-                Together, we are creating a brighter future for our community, one person at a time.
-            </p>
-        </div>
+    <div class="article-flex-gap">
     </div>
-    <div class="also-in-this-section-communities">
-        <h2><u class="u">Also in this sect</u>ion</h2>
-
-        <div class="article-1-light-shadow">
-
-            <img src="/images/donations.jpg" class="article-1-picture" alt="donations">
-            <h4 class="article-title">The power of donations</h4>
-            <p class="article-1-paragraph-1">The act of donating, whether it's money or time, can have an incredibly
-                powerful impact on both the recipient and the giver. Donations can help to create positive change in the
-                world, whether it's in the form of supporting a charitable organization or helping an individual in
-                need.</p>
-
-            <h5 class="article-1-readmore"><i>
-                    <a href="donations.html" class="link">Read More </a>
-                </i></h5>
+    <div class="flex-article-test">
+        <div class="article-item">
+            <img src="images/article_images/community.jpg">
 
         </div>
-        <div class="article-2-light-shadow">
 
-            <img src="/images/article_images/wallet.jpg" class="article-1-picture" alt="wallet">
-            <h4 class="article-title">Empowering communities to break the cycle of poverty</h4>
-            <p class="article-2-paragraph-1">Poverty is a complex issue that affects millions of people worldwide. Our
-                charity organization is committed to breaking the cycle of poverty by empowering communities and
-                providing them...</p>
-            <p class="article-2-paragraph-2"></p>
-
-
-
-            <h5 class="article-1-readmore"><i>
-                    <a href="about-us.html" class="link">Read More </a>
-                </i></h5>
-
-        </div>
-        <div class="article-3-light-shadow">
-
-            <img src="/images/article_images/golf.jpg" class="article-1-picture" alt="golf">
-            <h4 class="article-title">2023 Golf day</h4>
-            <p class="article-3-paragraph-1">The 16th of May is an important day for our organization. We are hosting a
-                Golf day to raise funds for our cause. Our organization is dedicated to providing a safe and nurturing
-                environment for children who are in need.</p>
-            <p class="article-3-paragraph-2"></p>
-
-
-            <h5 class="article-1-readmore"><i>
-                    <a href="golf-day.html" class="link">Read More </a>
-                </i></h5>
+        <div>
+            <h3>MAKING A DIFFERENCE IN THE COMMUNITY</h3>
         </div>
 
-        <!--___________________________________________footer_____________________________________-->
+    </div>
+    <div class="article-content">
+        <p>At our charity organization, we are passionate about creating positive change in our local community.
+            Through our programs and services, we strive to make a difference in the lives of individuals and
+            families who are facing challenges and adversity.
+        </p>
+
+        <p>One way that we are making a difference is by providing essential resources to those in need. Whether
+            it's food and clothing for families who are struggling to make ends meet or educational resources for
+            children who are falling behind in school, our organization is committed to supporting individuals and
+            families in our community.
+
+        </p>
+
+        <p>In addition to providing basic necessities, we are also focused on creating long-term solutions to the
+            issues facing our community. This includes offering job training and employment services to help
+            individuals build a stable and secure future for themselves and their families. We also provide
+            counseling and support services for those who are struggling with mental health issues, addiction, or
+            other challenges.
+        </p>
+
+        <p>One of the things that sets our organization apart is our commitment to collaboration and partnership. We
+            work closely with other community organizations, government agencies, and businesses to create a network
+            of support for those in need. By working together, we are able to leverage our resources and expertise
+            to create greater impact and reach more people in our community.</p>
+
+        <p>Through our programs and services, we have seen firsthand the positive impact that our organization is
+            having on the lives of individuals and families in our community. From providing a hot meal to someone
+            who is hungry to helping a family find stable housing, we know that our work is making a difference.</p>
+
+        <p>We are grateful to our donors, volunteers, and community partners who help make our work possible.
+            Together, we are creating a brighter future for our community, one person at a time.
+        </p>
+    </div>
+    <h2 class="article-heading-how-we-help-children"><span class="u">ALSO IN </span>THIS SECTION</h2>
+    <div class="flex-container-one">
+
+        <div class="item">
+            <img src="images/donations.jpg" alt="donations">
+            <h3>The power of donations</h3>
+            <p>The act of donating, whether it's money or time, can have an incredibly powerful impact on both the
+                recipient and the giver. Donations can help to create positive change in the world, whether it's in the
+                form of supporting a charitable organization or helping an individual in need...</p>
+
+            <a href="donations.html" class="link readmore">
+                <p>Read More </p>
+            </a>
+
+        </div>
+
+        <div class="item">
+            <img src="images/article_images/wallet.jpg" alt="wallet">
+
+            <h3>Empowering communities to break the cycle of poverty</h3>
+            <p>Poverty is a complex issue that affects millions of people worldwide. Our charity organization is
+                committed to breaking the cycle of poverty by empowering communities and providing them...</p>
+
+
+            <a href="cycle-poverty.html" class="link readmore">
+                <p>Read More </p>
+            </a>
+        </div>
+        <div class="item ">
+            <img src="/images/article_images/golf.jpg" alt="golf">
+
+            <h3>2023 Golf Day</h3>
+            <p>The 16th of May is an important day for our organization. We are hosting a Golf day to raise funds
+                for
+                our cause. Our organization is dedicated to providing a safe and nurturing environment for children
+                who
+                are in need.</p>
+
+            <a href="golf-day.html" class="link readmore">
+                <p>Read More </p>
+            </a>
+        </div>
+
+    </div>
+
+
+    <!--___________________________________________footer_____________________________________-->
     </div>
     <footer>
         <div class="content">
