--- a/contact-us.html
+++ b/contact-us.html
@@ -40,20 +40,24 @@
         </div>
     </nav>
 
+    <div class="article-flex-gap">
+    </div>
+    <div class="flex-article-test">
+        <div class="article-item">
+            <img src="images/contact.jpg">
 
-    <div class="food-donations-color">
-        <img src="/images/contact.jpg" class="food-donations-img" alt="contact">
-        <span class="contact-main-heading">CONTACT </span>
-        <span class="contact-main-heading-2">US</span>
+        </div>
+
+        <div>
+            <h3>CONTACT US</h3>
+        </div>
 
     </div>
     <div>
         <iframe src="https://embed.waze.com/iframe?zoom=16&lat=-26.099732&lon=27.751654&ct=livemap" allowfullscreen
             class="map"></iframe>
     </div>
-    <div class="map-icon">
-        <img src="images/location.png" alt="location-icon">
-    </div>
+
 
 
     <div class="flex-container-contact flex-margin-contact">
