--- a/cycle-poverty.html
+++ b/cycle-poverty.html
@@ -38,90 +38,90 @@
         </div>
 
     </nav>
+    <div class="article-flex-gap">
+    </div>
+    <div class="flex-article-test">
+        <div class="article-item">
+            <img src="images/article_images/wallet.jpg">
 
-
-    <div class="food-donations-color">
-        <img src="/images/article_images/wallet.jpg" class="food-donations-img" alt="wallet">
-        <span class="cycle-main-heading">CYCLE OF</span>
-        <span class="cycle-main-heading-2">POVERTY</span>
-        <div class="article-content">
-            <h3>Introduction:</h3>
-            <p>Poverty is a complex issue that affects millions of people worldwide. Our charity organization is
-                committed to breaking the cycle of poverty by empowering communities and providing them with the
-                resources they need to succeed. In this article, we'll share some of the ways we're making a difference.
-            </p>
-            <h3>Education and Training:</h3>
-            <p>Another critical aspect of our work is providing education and training to individuals and communities.
-                We offer a range of programs, from basic literacy and numeracy to vocational training. By improving
-                access to education and training, we're equipping individuals with the skills
-                and knowledge they need to succeed in the workforce and build better lives for themselves and their
-                families.
-            </p>
-            <h3>Healthcare and nutrition:</h3>
-            <p>Our charity organization also works to improve access to healthcare and nutrition in impoverished
-                communities. We provide
-                nutrition programs, such as feeding programs and food security initiatives. By improving access to
-                healthcare and nutrition, we're helping to ensure that individuals and communities can thrive and break
-                the cycle of poverty.</p>
-            <h3>Conclusion:</h3>
-            <p>Poverty is a complex issue, but our charity organization is committed to breaking the cycle by empowering
-                communities and providing them with the resources they need to succeed. Through education and training
-                initiatives, and healthcare and nutrition services, we're making a
-                difference in the lives of people all around the country. We encourage others to get involved and
-                support our efforts to break the cycle of poverty and create a brighter future for all.</p>
         </div>
-    </div>
-    <div class="also-in-this-section-cycle">
-        <h2><u class="u">Also in this sect</u>ion</h2>
-    </div>
-    <div class="article-1-light-shadow">
 
-        <img src="/images/article_images/blankets.jpg" class="article-1-picture" alt="blankets">
-        <h4 class="article-title">Winter Blanket run</h4>
-        <p class="article-1-paragraph-1">Winter can be an incredibly difficult time for many children, particularly
-            those from less privileged backgrounds.</p>
-        <p class="article-2-paragraph-2">As temperatures drop, these children may lack access to warm clothing and
-            blankets, leaving them at risk of illness and discomfort...</p>
-
-
-        <h5 class="article-1-readmore"><i>
-                <a href="blanket-run.html" class="link">Read More </a>
-            </i></h5>
+        <div>
+            <h3>BREAKING THE CYCLE OF POVERTY</h3>
+        </div>
 
     </div>
-    <div class="article-2-light-shadow">
-
-        <img src="/images/article_images/golf.jpg" class="article-1-picture" alt="golf">
-        <h4 class="article-title">2023 Golf day</h4>
-        <p class="article-2-paragraph-1">The 16th of May is an important day for our organization. We are
-            hosting a Golf day to raise funds for
-            our cause. Our organization is dedicated to providing a safe and nurturing environment for children
-            who
-            are in need.</p>
-        <p class="article-2-paragraph-2"></p>
-
-
-
-        <h5 class="article-1-readmore"><i>
-                <a href="golf-day.html" class="link">Read More </a>
-            </i></h5>
-
-    </div>
-    <div class="article-3-light-shadow">
-
-        <img src="/images/donations.jpg" class="article-1-picture" alt="donations">
-        <h4 class="article-title">The power of donations</h4>
-        <p class="article-3-paragraph-1">The act of donating, whether it's money or time, can have an incredibly
-            powerful impact on both the recipient and the giver. Donations can help to create positive change in the
-            world, whether it's in the form of supporting a charitable organization or helping an individual in need...
+    <div class="article-content">
+        <p>Poverty is a complex issue that affects millions of people worldwide. Our charity organization is
+            committed to breaking the cycle of poverty by empowering communities and providing them with the
+            resources they need to succeed. In this article, we'll share some of the ways we're making a difference.
         </p>
-        <p class="article-3-paragraph-2"></p>
-
-
-        <h5 class="article-1-readmore"><i>
-                <a href="donations.html" class="link">Read More </a>
-            </i></h5>
+        <h3>Education and Training:</h3>
+        <p>Another critical aspect of our work is providing education and training to individuals and communities.
+            We offer a range of programs, from basic literacy and numeracy to vocational training. By improving
+            access to education and training, we're equipping individuals with the skills
+            and knowledge they need to succeed in the workforce and build better lives for themselves and their
+            families.
+        </p>
+        <h3>Healthcare and nutrition:</h3>
+        <p>Our charity organization also works to improve access to healthcare and nutrition in impoverished
+            communities. We provide
+            nutrition programs, such as feeding programs and food security initiatives. By improving access to
+            healthcare and nutrition, we're helping to ensure that individuals and communities can thrive and break
+            the cycle of poverty.</p>
+        <h3>Conclusion:</h3>
+        <p>Poverty is a complex issue, but our charity organization is committed to breaking the cycle by empowering
+            communities and providing them with the resources they need to succeed. Through education and training
+            initiatives, and healthcare and nutrition services, we're making a
+            difference in the lives of people all around the country. We encourage others to get involved and
+            support our efforts to break the cycle of poverty and create a brighter future for all.</p>
     </div>
+    <h2 class="article-heading-how-we-help-children"><span class="u">ALSO IN </span>THIS SECTION</h2>
+    <div class="flex-container-one">
+
+        <div class="item">
+            <img src="images/article_images/blankets.jpg" alt="blanket-run">
+            <h3>Winter Blanket run</h3>
+            <p>Winter can be an incredibly difficult time for many children, particularly those from less privileged
+                backgrounds.
+
+                As temperatures drop, these children may lack access to warm clothing and blankets, leaving them at risk
+                of illness and discomfort...</p>
+
+            <a href="blanket-run.html" class="link readmore">
+                <p>Read More </p>
+            </a>
+
+        </div>
+
+        <div class="item">
+            <img src="images/article_images/golf.jpg" alt="Golfs">
+
+            <h3>2023 Golf Day</h3>
+            <p>The 16th of May is an important day for our organization. We are hosting a Golf day to raise funds for
+                our cause. Our organization is dedicated to providing a safe and nurturing environment for children who
+                are in need.</p>
+
+
+            <a href="golf-day.html" class="link readmore">
+                <p>Read More </p>
+            </a>
+        </div>
+        <div class="item ">
+            <img src="/images/donations.jpg" alt="donations">
+
+            <h3>Power of donations</h3>
+            <p>The act of donating, whether it's money or time, can have an incredibly powerful impact on both the
+                recipient and the giver. Donations can help to create positive change in the world, whether it's in the
+                form of supporting a charitable organization or helping an individual in need...</p>
+
+            <a href="donations.html" class="link readmore">
+                <p>Read More </p>
+            </a>
+        </div>
+
+    </div>
+
 
     <!--___________________________________________footer_____________________________________-->
 
