--- a/donations.html
+++ b/donations.html
@@ -38,86 +38,91 @@
 
     </nav>
 
-
-    <div class="food-donations-color">
-        <img src="/images/donations.jpg" class="donations-img" alt="donations">
-        <span class="donations-main-heading">POWER OF</span>
-        <span class="donations-main-heading-2">DONATIONS</span>
-        <div class="article-content">
-            <p>The act of donating, whether it's money or time, can have an incredibly powerful impact on both the
-                recipient and the giver. Donations can help to create positive change in the world, whether it's in the
-                form of supporting a charitable organization or helping an individual in need.
-            </p>
-
-            <p>The power of donations lies not just in the tangible benefits they provide, but also in the intangible
-                ones. For example, the act of giving can create a sense of fulfilment and purpose for the donor, as
-                they are able to make a meaningful difference in the lives of others. In addition, donations can also
-                help to inspire others to give, creating a ripple effect of positive change in the community.
-
-            </p>
-
-            <p>Charitable donations can be used to fund important programs and services, such as providing food and
-                shelter for the homeless, supporting medical research, or aiding disaster relief efforts. Donations can
-                also help to support education and the arts, providing opportunities for individuals to learn and grow.
-            </p>
-
-            <p>One of the most powerful aspects of donations is their ability to create a sense of community and
-                connection. By giving to a cause, individuals can feel like they are a part of something larger than
-                themselves, and can connect with others who share similar values and goals.</p>
-
-            <p>Ultimately, the power of donations lies in the ability of individuals to make a positive impact on the
-                world around them. Whether it's a small donation to a local charity or a larger contribution to a global
-                cause, every donation has the potential to create meaningful change and make a difference in the lives
-                of others.</p>
-        </div>
+    <div class="article-flex-gap">
     </div>
-    <div class="also-in-this-section-donations">
-        <h2><u class="u">Also in this sect</u>ion</h2>
-
-        <div class="article-1-light-shadow">
-
-            <img src="/images/article_images/community.jpg" class="article-1-picture" alt="community">
-            <h4 class="article-title">Making a difference in the community</h4>
-            <p class="article-1-paragraph-1">At our charity organization, we are passionate about creating positive
-                change in our local community. Through our programs and services, we strive to make a ...</p>
-
-            <h5 class="article-1-readmore"><i>
-                    <a href="communities.html" class="link">Read More </a>
-                </i></h5>
+    <div class="flex-article-test">
+        <div class="article-item">
+            <img src="images/donations.jpg">
 
         </div>
-        <div class="article-2-light-shadow">
 
-            <img src="/images/article_images/wallet.jpg" class="article-1-picture" alt="wallet">
-            <h4 class="article-title">Empowering communities to break the cycle of poverty</h4>
-            <p class="article-2-paragraph-1">Poverty is a complex issue that affects millions of people worldwide. Our
-                charity organization is committed to breaking the cycle of poverty by empowering communities and
-                providing them...</p>
-            <p class="article-2-paragraph-2"></p>
-
-
-
-            <h5 class="article-1-readmore"><i>
-                    <a href="cycle-poverty.html" class="link">Read More </a>
-                </i></h5>
-
+        <div>
+            <h3>THE POWER OF DONATIONS</h3>
         </div>
-        <div class="article-3-light-shadow">
 
-            <img src="/images/article_images/blankets.jpg" class="article-1-picture" alt="blankets">
-            <h4 class="article-title">Winter Blanket run</h4>
-            <p class="article-3-paragraph-1">Winter can be an incredibly difficult time for many children, particularly
-                those from less privileged backgrounds.</p>
-            <p class="article-3-paragraph-2">As temperatures drop, these children may lack access to warm clothing
-                and blankets,
-                leaving them at risk of...</p>
-
-
-            <h5 class="article-1-readmore"><i>
-                    <a href="blanket-run.html" class="link">Read More </a>
-                </i></h5>
-        </div>
     </div>
+    <div class="article-content">
+        <p>The act of donating, whether it's money or time, can have an incredibly powerful impact on both the
+            recipient and the giver. Donations can help to create positive change in the world, whether it's in the
+            form of supporting a charitable organization or helping an individual in need.
+        </p>
+
+        <p>The power of donations lies not just in the tangible benefits they provide, but also in the intangible
+            ones. For example, the act of giving can create a sense of fulfilment and purpose for the donor, as
+            they are able to make a meaningful difference in the lives of others. In addition, donations can also
+            help to inspire others to give, creating a ripple effect of positive change in the community.
+
+        </p>
+
+        <p>Charitable donations can be used to fund important programs and services, such as providing food and
+            shelter for the homeless, supporting medical research, or aiding disaster relief efforts. Donations can
+            also help to support education and the arts, providing opportunities for individuals to learn and grow.
+        </p>
+
+        <p>One of the most powerful aspects of donations is their ability to create a sense of community and
+            connection. By giving to a cause, individuals can feel like they are a part of something larger than
+            themselves, and can connect with others who share similar values and goals.</p>
+
+        <p>Ultimately, the power of donations lies in the ability of individuals to make a positive impact on the
+            world around them. Whether it's a small donation to a local charity or a larger contribution to a global
+            cause, every donation has the potential to create meaningful change and make a difference in the lives
+            of others.</p>
+    </div>
+    <h2 class="article-heading-how-we-help-children"><span class="u">ALSO IN </span>THIS SECTION</h2>
+    <div class="flex-container-one">
+
+        <div class="item">
+            <img src="images/article_images/community.jpg" alt="food-donations">
+            <h3>Making a difference in the community</h3>
+            <p>At our charity organization, we are passionate about creating positive change in our local community.
+                Through our programs and services, we strive to make a ...</p>
+
+            <a href="communities.html" class="link readmore">
+                <p>Read More </p>
+            </a>
+
+        </div>
+
+        <div class="item">
+            <img src="images/article_images/wallet.jpg" alt="wallet">
+
+            <h3>Empowering communities to break the cycle of poverty</h3>
+            <p>Poverty is a complex issue that affects millions of people worldwide. Our charity organization is
+                committed to breaking the cycle of poverty by empowering communities and providing them...</p>
+
+
+            <a href="cycle-poverty.html" class="link readmore">
+                <p>Read More </p>
+            </a>
+        </div>
+        <div class="item ">
+            <img src="/images/article_images/blankets.jpg" alt="blankets">
+
+            <h3>Winter blanket run</h3>
+            <p>Winter can be an incredibly difficult time for many children, particularly those from less privileged
+                backgrounds.
+
+                As temperatures drop, these children may lack access to warm clothing and blankets, leaving them at risk
+                of...</p>
+
+            <a href="blanket-run.html" class="link readmore">
+                <p>Read More </p>
+            </a>
+        </div>
+
+    </div>
+
+
     <!--___________________________________________footer_____________________________________-->
 
     <footer>
