--- a/food-donations.html
+++ b/food-donations.html
@@ -38,88 +38,87 @@
             <hr>
         </div>
     </nav>
-
-
-    <div class="food-donations-color">
-        <img src="/images/article_images/food_donations.jpg" class="food-donations-img" alt="food-donations">
-        <span class="article-main-heading">FOOD</span>
-        <span class="article-main-heading-2">DONATIONS</span>
-        <div class="article-content">
-            <p>The Heart and Soul Foundation is an organization that is dedicated to helping those in need by providing
-                food support to the children and elderly people in our care. There are many reasons why donating food
-                to our organization is a worthwhile and impactful way to give back to your community. First and
-                foremost, donating food to the Heart and Soul Foundation is a practical way to address food insecurity
-                in the community. Your donation can help ensure that these individuals have access to the necessities
-                they need to stay healthy and nourished. In addition to addressing immediate needs, donating food to
-                the Heart and Soul Foundation can also help promote long-term stability and well-being.
-            <p>When
-                individuals and children have access to healthy and nutritious food, they are better able to focus on
-                other aspects of their lives, such as education, employment, and personal growth. This can help break
-                the cycle of poverty and improve the overall quality of life in your community. Donating food to the
-                Heart and Soul Foundation is also a way to promote a culture of giving and compassion. When we take
-                the time to help those in need, we set an example for others to follow. </p>
-
-            <p>Finally, donating food to the
-                Heart and Soul Foundation is a simple and effective way to make a tangible difference. Unlike some
-                other charitable efforts, your donation will go directly to those who need it most. You can be sure that
-                your contribution will be put to good use, providing real benefits to those who are most vulnerable. In
-                conclusion, donating food to the Heart and Soul Foundation is a practical, impactful, and compassionate
-                way to make a real difference in the lives of those in need. Your donation can address immediate needs,
-                promote long-term stability and well-being, inspire others to get involved, and make a tangible
-                difference in your community.</p>
+    <div class="article-flex-gap">
+    </div>
+    <div class="flex-article-test">
+        <div class="article-item">
+            <img src="images/article_images/food_donations.jpg">
 
         </div>
-    </div>
-    <div class="also-in-this-section">
-        <h2><u class="u">Also in this sect</u>ion</h2>
-    </div>
-    <div class="article-1-light-shadow">
 
-        <img src="/images/article_images/blankets.jpg" class="article-1-picture" alt="blankets">
-        <h4 class="article-title">Winter Blanket run</h4>
-        <p class="article-1-paragraph-1">Winter can be an incredibly difficult time for many children, particularly
-            those from less privileged backgrounds.</p>
-        <p class="article-2-paragraph-2">As temperatures drop, these children may lack access to warm clothing and
-            blankets, leaving them at risk of illness and discomfort...</p>
-
-
-        <h5 class="article-1-readmore"><i>
-                <a href="blanket-run.html" class="link">Read More </a>
-            </i></h5>
+        <div>
+            <h3>FOOD DONATIONS</h3>
+        </div>
 
     </div>
-    <div class="article-2-light-shadow">
+    <div class="article-content">
+        <p>The Heart and Soul Foundation is an organization that is dedicated to helping those in need by providing
+            food support to the children and elderly people in our care. There are many reasons why donating food
+            to our organization is a worthwhile and impactful way to give back to your community. First and
+            foremost, donating food to the Heart and Soul Foundation is a practical way to address food insecurity
+            in the community. Your donation can help ensure that these individuals have access to the necessities
+            they need to stay healthy and nourished. In addition to addressing immediate needs, donating food to
+            the Heart and Soul Foundation can also help promote long-term stability and well-being.
+        <p>When
+            individuals and children have access to healthy and nutritious food, they are better able to focus on
+            other aspects of their lives, such as education, employment, and personal growth. This can help break
+            the cycle of poverty and improve the overall quality of life in your community. Donating food to the
+            Heart and Soul Foundation is also a way to promote a culture of giving and compassion. When we take
+            the time to help those in need, we set an example for others to follow. </p>
 
-        <img src="/images/article_images/golf.jpg" class="article-1-picture" alt="golf">
-        <h4 class="article-title">2023 Golf day</h4>
-        <p class="article-2-paragraph-1">The 16th of May is an important day for our organization. We are
-            hosting a Golf day to raise funds for
-            our cause. Our organization is dedicated to providing a safe and nurturing environment for children
-            who
-            are in need.</p>
-        <p class="article-2-paragraph-2"></p>
+        <p>Finally, donating food to the
+            Heart and Soul Foundation is a simple and effective way to make a tangible difference. Unlike some
+            other charitable efforts, your donation will go directly to those who need it most. You can be sure that
+            your contribution will be put to good use, providing real benefits to those who are most vulnerable. In
+            conclusion, donating food to the Heart and Soul Foundation is a practical, impactful, and compassionate
+            way to make a real difference in the lives of those in need. Your donation can address immediate needs,
+            promote long-term stability and well-being, inspire others to get involved, and make a tangible
+            difference in your community.</p>
+    </div>
+    <h2 class="article-heading-how-we-help-children"><span class="u">ALSO IN </span>THIS SECTION</h2>
+    <div class="flex-container-one">
+
+        <div class="item">
+            <img src="images/article_images/blankets.jpg" alt="Blanket">
+            <h3>Winter Blanket Run</h3>
+            <p>TWinter can be an incredibly difficult time for many children, particularly those from less privileged
+                backgrounds.
+
+                As temperatures drop, these children may lack access to warm clothing and blankets, leaving them at risk
+                of illness and discomfort...</p>
+
+            <a href="blanket-run.html" class="link readmore">
+                <p>Read More </p>
+            </a>
+
+        </div>
+
+        <div class="item">
+            <img src="images/article_images/wallet.jpg" alt="wallet">
+
+            <h3>Empowering communities to break the cycle of poverty</h3>
+            <p>Poverty is a complex issue that affects millions of people worldwide. Our charity organization is
+                committed to breaking the cycle of poverty by empowering communities and providing them...</p>
 
 
+            <a href="cycle-poverty.html" class="link readmore">
+                <p>Read More </p>
+            </a>
+        </div>
+        <div class="item ">
+            <img src="/images/article_images/community.jpg" alt="golf">
 
-        <h5 class="article-1-readmore"><i>
-                <a href="golf-day.html" class="link">Read More </a>
-            </i></h5>
+            <h3>Making a difference in the community</h3>
+            <p>At our charity organization, we are passionate about creating positive change in our local community.
+                Through our programs and services, we strive to make a ...</p>
+
+            <a href="communities.html" class="link readmore">
+                <p>Read More </p>
+            </a>
+        </div>
 
     </div>
-    <div class="article-3-light-shadow">
 
-        <img src="/images/article_images/wallet.jpg" class="article-1-picture" alt="wallet">
-        <h4 class="article-title">Empowering communities to break the cycle of poverty</h4>
-        <p class="article-3-paragraph-1">Poverty is a complex issue that affects millions of people
-            worldwide. Our charity organization is committed to breaking the cycle of poverty by
-            empowering communities and providing them...</p>
-        <p class="article-3-paragraph-2"></p>
-
-
-        <h5 class="article-1-readmore"><i>
-                <a href="cycle-poverty.html" class="link">Read More </a>
-            </i></h5>
-    </div>
 
     <!--___________________________________________footer_____________________________________-->
 
