--- a/gallery.html
+++ b/gallery.html
@@ -36,10 +36,16 @@
         </div>
 
     </nav>
-    <div class="our-gallery-color">
-        <img src="/images/gallery_main.jpg" class="our-gallery-img" alt="gallery">
-        <span class="our-gallery-main-heading">Our</span>
-        <span class="our-gallery-main-heading-2">Gallery</span>
+    <div class="flex-article-test">
+        <div class="article-item">
+            <img src="images/gallery_main.jpg">
+
+        </div>
+
+        <div>
+            <h3>OUR GALLERY</h3>
+        </div>
+
     </div>
     <div class="gallery-responsive-gap">
         &nbsp;
