--- a/get_involved.html
+++ b/get_involved.html
@@ -38,91 +38,86 @@
         </div>
 
     </nav>
+    <div class="flex-article-test">
+        <div class="article-item">
+            <img src="images/get_involved.jpg">
 
+        </div>
 
-    <div class="food-donations-color">
-        <img src="/images/get_involved.jpg" class="food-donations-img" alt="get-involved">
-        <span class="get-involved-main-heading">GET</span>
-        <span class="get-involved-main-heading-2">INVOLVED</span>
-        <div class="article-content">
-            <p>By donating your time, money, or resources to Heart and Soul Foundation, you are helping to make a
-                real difference in the world. You are supporting efforts to combat poverty, promote education, advance
-                human rights and so much more. Your support can help us to ensure that we have the resources we
-                need to continue our work and that the communities and causes we serve receive the support and
-                attention they deserve. Together, we can make a difference and create a better future for all.
-
-            <h2>Needs :</h2>
-            <p>Heart and Soul Foundation accepts any donation – clothes, old furniture, electric goods, educational
-                toys ect.
-                We always need fresh or tinned food to prepare a warm wholesome meal for the children and individuals in
-                the community. These products include: Maize meal, Oats, Wheatbix, Rice Crispies, Corn Flakes, White or
-                brown sugar, Long-life Milk, Flour, Butter, Cooking Oil, Bread, Tinned Food, Rice, Pasta, Oros
-                Cooldrink, Yeast, Soup and sauce powder, Eggs, Fresh Meat, Fresh fruit and vegetables, Frozen mix
-                vegetables, IQF Chicken, Vienna's, Poloni, Cheese, Spices and salt, Tomato Sauce, Instant Noodles,
-                Yogurt, Jam, Peanut butter, Syrup, Bread Spread, Cookies, Simba Crisps, Sweets.
-                Other necessities:
-                Cleaning agents, Face soap, Deodorant, Paper Rolls, Disinfectant Liquid, Hand Wash, Steel Wool, Jik,
-                Toothpaste for children and adults, Toothbrushes, Baby diapers, Baby formula, Wax Paper, Tin Foil, Small
-                and large clear plastic bags, Black Bags, Tissues, Wet Wipes, Adult nappies for the elderly people in
-                the old age homes.</p>
-
+        <div>
+            <h3>GET INVOLVED</h3>
         </div>
 
     </div>
-    <div class="also-in-this-section-get-involved">
-        <h2><u class="u">Also in this sect</u>ion</h2>
+    <div class="article-content">
+        <p>By donating your time, money, or resources to Heart and Soul Foundation, you are helping to make a
+            real difference in the world. You are supporting efforts to combat poverty, promote education, advance
+            human rights and so much more. Your support can help us to ensure that we have the resources we
+            need to continue our work and that the communities and causes we serve receive the support and
+            attention they deserve. Together, we can make a difference and create a better future for all.
 
-        <div class="article-1-light-shadow">
+        <h2>Needs :</h2>
+        <p>Heart and Soul Foundation accepts any donation – clothes, old furniture, electric goods, educational
+            toys ect.
+            We always need fresh or tinned food to prepare a warm wholesome meal for the children and individuals in
+            the community. These products include: Maize meal, Oats, Wheatbix, Rice Crispies, Corn Flakes, White or
+            brown sugar, Long-life Milk, Flour, Butter, Cooking Oil, Bread, Tinned Food, Rice, Pasta, Oros
+            Cooldrink, Yeast, Soup and sauce powder, Eggs, Fresh Meat, Fresh fruit and vegetables, Frozen mix
+            vegetables, IQF Chicken, Vienna's, Poloni, Cheese, Spices and salt, Tomato Sauce, Instant Noodles,
+            Yogurt, Jam, Peanut butter, Syrup, Bread Spread, Cookies, Simba Crisps, Sweets.
+            Other necessities:
+            Cleaning agents, Face soap, Deodorant, Paper Rolls, Disinfectant Liquid, Hand Wash, Steel Wool, Jik,
+            Toothpaste for children and adults, Toothbrushes, Baby diapers, Baby formula, Wax Paper, Tin Foil, Small
+            and large clear plastic bags, Black Bags, Tissues, Wet Wipes, Adult nappies for the elderly people in
+            the old age homes.</p>
+    </div>
+    <h2 class="article-heading-how-we-help-children"><span class="u">ALSO IN </span>THIS SECTION</h2>
+    <div class="flex-container-one">
 
-            <img src="/images/article_images/food_donations.jpg" class="article-1-picture" alt="food-donation">
-            <h4 class="article-title">FOOD DONATIONS</h4>
-            <p class="article-1-paragraph-1">The Heart and Soul Foundation is an organization that is dedicated to
-                helping those in need by providing
-                food support to the children and elderly people in our care. There are many reasons why donating
-                food
-                to our organization is a worthwhile and impactful way to give back to your community....</p>
+        <div class="item">
+            <img src="images/donations.jpg" alt="donations">
+            <h3>Power of donations</h3>
+            <p>The act of donating, whether it's money or time, can have an incredibly powerful impact on both the
+                recipient and the giver. Donations can help to create positive change in the world, whether it's in the
+                form of supporting a charitable organization or helping an individual in need.</p>
 
-            <h5 class="article-1-readmore"><i>
-                    <a href="food-donations.html" class="link">Read More </a>
-                </i></h5>
+            <a href="donations.html" class="link readmore">
+                <p>Read More </p>
+            </a>
 
         </div>
-        <div class="article-2-light-shadow">
 
-            <img src="/images/article_images/wallet.jpg" class="article-1-picture" alt="wallet">
-            <h4 class="article-title">Empowering communities to break the cycle of poverty</h4>
-            <p class="article-2-paragraph-1">Poverty is a complex issue that affects millions of people worldwide. Our
-                charity organization is committed to breaking the cycle of poverty by empowering communities and
-                providing them...
+        <div class="item">
+            <img src="images/article_images/wallet.jpg" alt="wallet">
 
-            </p>
-            <p class="article-2-paragraph-2"></p>
+            <h3>Empowering communities to break the cycle of poverty</h3>
+            <p>Poverty is a complex issue that affects millions of people worldwide. Our charity organization is
+                committed to breaking the cycle of poverty by empowering communities and providing them...</p>
 
 
-
-            <h5 class="article-1-readmore"><i>
-                    <a href="cycle-poverty.html" class="link">Read More </a>
-                </i></h5>
-
+            <a href="cycle-poverty.html" class="link readmore">
+                <p>Read More </p>
+            </a>
         </div>
-        <div class="article-3-light-shadow">
+        <div class="item ">
+            <img src="/images/article_images/community.jpg" alt="golf">
 
-            <img src="/images/donations.jpg" class="article-1-picture" alt="donations">
-            <h4 class="article-title">The power of donations</h4>
-            <p class="article-3-paragraph-1">The act of donating, whether it's money or time, can have an incredibly
-                powerful impact on both the recipient and the giver. Donations can help to create positive change in the
-                world, whether it's in the form of supporting a charitable organization or helping an individual in
-                need.</p>
-            <p class="article-3-paragraph-2"></p>
+            <h3>Making a difference in the community
+            </h3>
+            <p>At our charity organization, we are passionate about creating positive change in our local community.
+                Through our programs and services, we strive to make a ...</p>
 
-
-            <h5 class="article-1-readmore"><i>
-                    <a href="donations.html" class="link">Read More </a>
-                </i></h5>
+            <a href="communities.html" class="link readmore">
+                <p>Read More </p>
+            </a>
         </div>
 
+    </div>
 
-        <!--_____________________________________footer___________________-->
+
+
+
+    <!--_____________________________________footer___________________-->
     </div>
     <footer>
         <div class="content">
