--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
             <div class="item">
                 <img src="images/article_images/food_donations.jpg">
-                <h3>FOOD DONATIONS</h3>
+                <h3>Food donations</h3>
                 <p>The Heart and Soul Foundation is an organization that is dedicated to helping those in need by
                     providing
                     food support to the children and elderly people in our care. There are many reasons why donating
@@ -211,7 +211,7 @@
                 <div class="topic"><span class="und-footer">Contact U</span>S</div>
                 <p class="und-footer">15 Dekker Street, Krugersdorp West, Krugersdorp, Gauteng, 1739</p>
                 <p class="und-footer">Ph. : +27 72 456 0669</p>
-                <p class="und-footer">opperman.estelle@gmail.com &nbsp; Estelle Opperman </p>
+                <p class="und-footer">opperman.estelle@gmail.com </p>
 
 
             </div>
