--- a/golf-day.html
+++ b/golf-day.html
@@ -39,125 +39,124 @@
         </div>
 
     </nav>
-
-
-    <div class="food-donations-color">
-        <img src="/images/article_images/golf.jpg" class="golf-donations-img" alt="donations">
-        <span class="golf-main-heading">GOLF</span>
-        <span class="golf-main-heading-2">DAY</span>
-        <div class="article-content">
-            <p>The 16th of May is an important day for our organization. We are hosting a Golf day to raise funds for
-                our cause. Our organization is dedicated to providing a safe and nurturing environment for children who
-                are in need. We believe that every child deserves a chance to learn, grow, and thrive. Unfortunately,
-                many children in our community do not have access to the basic necessities of life, such as food,
-                shelter,
-                and education. This is where our organization comes in. We are committed to providing these children
-                with the support they need to succeed.
-                The Golf day is an important event for us because it will help us to raise the funds we need to pay
-                rent,
-                feed our children three times a day, and provide them with educational supplies. These are basic
-                necessities that many of us take for granted, but for these children, they can make all the difference.
-            </p>
-            <p>With your support, we can ensure that these children have a safe and comfortable place to go, food to
-                eat, and the tools they need to learn and grow.</p>
-            <p>The purpose of this day is to bring people together to support our cause. Golf is a fun and social sport
-                that can be enjoyed by people of all ages and skill levels. By participating in the Golf day, you can
-                have
-                fun while making a difference in the lives of children in need. The funds we raise will go directly to
-                our
-                organization, allowing us to continue providing the support these children need.</p>
-            <p>Golf is a great way to spend time with friends and family while supporting a good cause. Whether you
-                are an experienced golfer or a beginner, there is something for everyone on the golf course. Golf is a
-                sport that requires concentration, skill, and strategy, which makes it both challenging and rewarding.
-                It
-                is also a great way to stay active and enjoy the outdoors.</p>
-            <p>While you are having fun on the golf course, it is important to remember the reason why we are here.
-                Every rand we raise will go towards providing a safe and nurturing environment for children in need. By
-                participating in the Golf day, you are helping to make a difference in the lives of these children.</p>
-            <p>In addition to the satisfaction of knowing that you are making a difference, participating in the Golf
-                day
-                can also be a lot of fun. You can enjoy a beautiful day on the golf course, socialize with friends and
-                family, and take part in a variety of activities and events. The Golf day is a great way to spend time
-                with
-                loved ones while supporting a good cause.</p>
-            <p>So, come out and join us for a day of golf, fun, and fundraising. Together, we can make a difference in
-                the lives of these children and help them to achieve their full potential.</p>
-            <p><strong>Date: 16 May 2023</strong></p>
-            <p><strong>Time: Tee off at 10:30</strong></p>
-            <p><strong>Place: Krugersdorp Golf Club</strong></p>
-            <p><strong>Prices: </strong></p>
-            <ul>
-                <li>R3000 per four-ball</li>
-                <li>R320 per 2-seater golf cart</li>
-                <li>R500 per hole sponsor</li>
-                <li>R1000 hole 9 &amp; 18 sponsor</li>
-            </ul>
-            <p>Dinner and prize giving to take place after the event.</p>
-            <p>Payment confirms your booking. Please use your initials and surname as reference.</p>
-            <p><strong>Donations :</strong></p>
-            <p>If you cannot join us for this event, but still want to contribute towards Heart and Soul Foundation, it
-                will be highly appreciated.
-            </p>
-            <p><strong>Banking Details :</strong> Heart and Soul Foundation FNB Current Account</p>
-            <p><strong>Account Number : </strong>62903485705</p>
-            <p><strong>Branch Code :</strong> 250241 </p>
-            <p><strong>Contact details :</strong> opperman.estelle@gmail.com</p>
-            <p><strong>Chris Opperman :</strong> 072 515 5350</p>
+    <div class="flex-article-test">
+        <div class="article-item">
+            <img src="images/article_images/golf.jpg">
 
         </div>
+
+        <div>
+            <h3>2023 GOLF DAY</h3>
+        </div>
+
     </div>
-    <div class="also-in-this-section-golf">
-        <h2><u class="u">Also in this sect</u>ion</h2>
+    <div class="article-content">
+        <p>The 16th of May is an important day for our organization. We are hosting a Golf day to raise funds for
+            our cause. Our organization is dedicated to providing a safe and nurturing environment for children who
+            are in need. We believe that every child deserves a chance to learn, grow, and thrive. Unfortunately,
+            many children in our community do not have access to the basic necessities of life, such as food,
+            shelter,
+            and education. This is where our organization comes in. We are committed to providing these children
+            with the support they need to succeed.
+            The Golf day is an important event for us because it will help us to raise the funds we need to pay
+            rent,
+            feed our children three times a day, and provide them with educational supplies. These are basic
+            necessities that many of us take for granted, but for these children, they can make all the difference.
+        </p>
+        <p>With your support, we can ensure that these children have a safe and comfortable place to go, food to
+            eat, and the tools they need to learn and grow.</p>
+        <p>The purpose of this day is to bring people together to support our cause. Golf is a fun and social sport
+            that can be enjoyed by people of all ages and skill levels. By participating in the Golf day, you can
+            have
+            fun while making a difference in the lives of children in need. The funds we raise will go directly to
+            our
+            organization, allowing us to continue providing the support these children need.</p>
+        <p>Golf is a great way to spend time with friends and family while supporting a good cause. Whether you
+            are an experienced golfer or a beginner, there is something for everyone on the golf course. Golf is a
+            sport that requires concentration, skill, and strategy, which makes it both challenging and rewarding.
+            It
+            is also a great way to stay active and enjoy the outdoors.</p>
+        <p>While you are having fun on the golf course, it is important to remember the reason why we are here.
+            Every rand we raise will go towards providing a safe and nurturing environment for children in need. By
+            participating in the Golf day, you are helping to make a difference in the lives of these children.</p>
+        <p>In addition to the satisfaction of knowing that you are making a difference, participating in the Golf
+            day
+            can also be a lot of fun. You can enjoy a beautiful day on the golf course, socialize with friends and
+            family, and take part in a variety of activities and events. The Golf day is a great way to spend time
+            with
+            loved ones while supporting a good cause.</p>
+        <p>So, come out and join us for a day of golf, fun, and fundraising. Together, we can make a difference in
+            the lives of these children and help them to achieve their full potential.</p>
+        <p><strong>Date: 16 May 2023</strong></p>
+        <p><strong>Time: Tee off at 10:30</strong></p>
+        <p><strong>Place: Krugersdorp Golf Club</strong></p>
+        <p><strong>Prices: </strong></p>
+        <ul>
+            <li>R3000 per four-ball</li>
+            <li>R320 per 2-seater golf cart</li>
+            <li>R500 per hole sponsor</li>
+            <li>R1000 hole 9 &amp; 18 sponsor</li>
+        </ul>
+        <p>Dinner and prize giving to take place after the event.</p>
+        <p>Payment confirms your booking. Please use your initials and surname as reference.</p>
+        <p><strong>Donations :</strong></p>
+        <p>If you cannot join us for this event, but still want to contribute towards Heart and Soul Foundation, it
+            will be highly appreciated.
+        </p>
+        <p><strong>Banking Details :</strong> Heart and Soul Foundation FNB Current Account</p>
+        <p><strong>Account Number : </strong>62903485705</p>
+        <p><strong>Branch Code :</strong> 250241 </p>
+        <p><strong>Contact details :</strong> opperman.estelle@gmail.com</p>
+        <p><strong>Chris Opperman :</strong> 072 515 5350</p>
+    </div>
+    <h2 class="article-heading-how-we-help-children"><span class="u">ALSO IN </span>THIS SECTION</h2>
+    <div class="flex-container-one">
 
-        <div class="article-1-light-shadow">
-
-            <img src="/images/article_images/food_donations.jpg" class="article-1-picture" alt="food-donations">
-            <h4 class="article-title">FOOD DONATIONS</h4>
-            <p class="article-1-paragraph-1">The Heart and Soul Foundation is an organization that is dedicated to
-                helping those in need by providing
+        <div class="item">
+            <img src="images/article_images/food_donations.jpg" alt="food-donations">
+            <h3>FOOD DONATIONS</h3>
+            <p>The Heart and Soul Foundation is an organization that is dedicated to helping those in need by
+                providing
                 food support to the children and elderly people in our care. There are many reasons why donating
-                food
-                to our organization is a worthwhile and impactful way to give back to your community....</p>
+                food to
+                our organization is a worthwhile...</p>
 
-            <h5 class="article-1-readmore"><i>
-                    <a href="food-donations.html" class="link">Read More </a>
-                </i></h5>
-
-        </div>
-        <div class="article-2-light-shadow">
-
-            <img src="/images/article_images/wallet.jpg" class="article-1-picture" alt="wallet">
-            <h4 class="article-title">Empowering communities to break the cycle of poverty</h4>
-            <p class="article-2-paragraph-1">Poverty is a complex issue that affects millions of people worldwide. Our
-                charity organization is committed to breaking the cycle of poverty by empowering communities and
-                providing them...
-
-            </p>
-            <p class="article-2-paragraph-2"></p>
-
-
-
-            <h5 class="article-1-readmore"><i>
-                    <a href="cycle-poverty.html" class="link">Read More </a>
-                </i></h5>
+            <a href="food-donations.html" class="link readmore">
+                <p>Read More </p>
+            </a>
 
         </div>
-        <div class="article-3-light-shadow">
 
-            <img src="/images/donations.jpg" class="article-1-picture" alt="donations">
-            <h4 class="article-title">The power of donations</h4>
-            <p class="article-3-paragraph-1">The act of donating, whether it's money or time, can have an incredibly
-                powerful impact on both the recipient and the giver. Donations can help to create positive change in the
-                world, whether it's in the form of supporting a charitable organization or helping an individual in
-                need.</p>
-            <p class="article-3-paragraph-2"></p>
+        <div class="item">
+            <img src="images/article_images/wallet.jpg" alt="wallet">
+
+            <h3>Empowering communities to break the cycle of poverty</h3>
+            <p>Poverty is a complex issue that affects millions of people worldwide. Our charity organization is
+                committed to breaking the cycle of poverty by empowering communities and providing them...</p>
 
 
-            <h5 class="article-1-readmore"><i>
-                    <a href="donations.html" class="link">Read More </a>
-                </i></h5>
+            <a href="cycle-poverty.html" class="link readmore">
+                <p>Read More </p>
+            </a>
         </div>
+        <div class="item ">
+            <img src="/images/article_images/golf.jpg" alt="golf">
+
+            <h3>2023 Golf Day</h3>
+            <p>The 16th of May is an important day for our organization. We are hosting a Golf day to raise funds
+                for
+                our cause. Our organization is dedicated to providing a safe and nurturing environment for children
+                who
+                are in need.</p>
+
+            <a href="golf-day.html" class="link readmore">
+                <p>Read More </p>
+            </a>
+        </div>
+
     </div>
+
+
     <!--_____________________________________footer___________________-->
 
     <footer>
